--- a/views/reviews/submission/submissionFormReviewCommentContainer.html
+++ b/views/reviews/submission/submissionFormReviewCommentContainer.html
@@ -1,27 +1,33 @@
 <form id="" name="" action="" method="" data-validate="parsley">
 	<div class="_BVPageHeaderContainer"></div>
 	<div class="BVPageBody">
-		<div class="BVSection BVSectionProductContainer"></div>
 		<div class="BVSection BVSectionErrorContainer">
 			<div class="BVSectionHeader _BVSectionHeaderErrorsContainer"></div>
 			<div class="_BVFormErrorsContainer"></div>
 		</div>
 		<div class="BVSection BVSectionReviewContainer">
 			<div class="BVSectionHeader _BVSectionHeaderReviewCommentContainer"></div>
-			<div class="BVField _BVTitleInputContainer"></div>
-			<div class="BVField _BVBodyTextInputContainer"></div>
+			<div class="BVSectionBody">
+				<div class="_BVProductInfoWidgetContainer"></div>
+				<div class="BVField _BVTitleInputContainer"></div>
+				<div class="BVField _BVBodyTextInputContainer"></div>
+			</div>
 		</div>
 		<div class="BVSection BVSectionMediaContainer">
 			<div class="BVSectionHeader _BVSectionHeaderMediaContainer"></div>
-			<div class="BVField _BVPhotoUploadContainer"></div>
-			<div class="BVField _BVVideoUploadInputContainer"></div>
+			<div class="BVSectionBody">
+				<div class="BVField _BVPhotoUploadContainer"></div>
+				<div class="BVField _BVVideoUploadInputContainer"></div>
+			</div>
 		</div>
 		<div class="BVSection BVSectionUserContainer">
 			<div class="BVSectionHeader _BVSectionHeaderUserContainer"></div>
-			<div class="BVField _BVUserNicknameInputContainer"></div>
-			<div class="BVField _BVUserEmailInputContainer"></div>
-			<div class="BVField _BVUserLocationInputContainer"></div>
-			<div class="BVField BVFieldGroup _BVContextDataValueGroupInputContainer"></div>
+			<div class="BVSectionBody">
+				<div class="BVField _BVUserNicknameInputContainer"></div>
+				<div class="BVField _BVUserEmailInputContainer"></div>
+				<div class="BVField _BVUserLocationInputContainer"></div>
+				<div class="BVField BVFieldGroup _BVContextDataValueGroupInputContainer"></div>
+			</div>
 		</div>
 	</div>
 	<div class="BVFooter">
