added functionality for tag and media upload display for submission
* only show one open field tag
* show new open field tag when needed
* only show one photo upload
* show new photo upload when needed
* updated photo upload to be more modular

--- a/views/universal/submission/inputUploadPhotoContainer.html
+++ b/views/universal/submission/inputUploadPhotoContainer.html
@@ -1,4 +1,6 @@
-<input class="_BVFormInput BVFormInputUpload" id="" type="file" name="photo" value="" />
-<label class="_BVUploadLabelText" for=""></label>
-<div class="_BVHelperText">5mb max per image</div>
-<div class="_BVPhotoUploadPreviewToggleContainer"></div>
+<div class="_BVPhotoUploadInputContainer">
+	<input class="_BVFormInput BVFormInputUpload" id="" type="file" name="photo" value="" />
+	<label class="_BVUploadLabelText" for=""></label>
+	<div class="_BVHelperText">5mb max per image</div>
+</div>
+<div class="_BVPhotoUploadPreviewContainer"></div>
