--- a/views/universal/submission/inputUploadPhotoPreviewContainer.html
+++ b/views/universal/submission/inputUploadPhotoPreviewContainer.html
@@ -1,5 +1,5 @@
-<div>
+<div class="BVPhotoUploadPreviewWrapper">
 	<div class="_BVPhotoGroupContainer"></div>
-	<div class="_BVFormInputWrapper _BVPhotoCaptionContainer"></div>
-	<div class="_BVFormInputWrapper _BVPhotoUrlContainer"></div>
+	<div class="_BVFormInputWrapper _BVPhotoCaptionInputWrapper"></div>
+	<div class="_BVFormInputWrapper _BVPhotoUrlInputWrapper"></div>
 </div>
