adding feedback status messages
* add status message from json response
* disable buttons while processing
* added controller for close button
* added blank default to sort options

--- a/views/universal/feedback/feedbackContainer.html
+++ b/views/universal/feedback/feedbackContainer.html
@@ -1,3 +1,4 @@
 <div class="_BVFeedbackCountContainer"></div>
 <div class="_BVFeedbackVotingContainer"></div>
 <div class="_BVReportInappropriateContainer"></div>
+<div class="_BVFeedbackVotingStatusMessageContainer"></div>
