removed ajax calls to use js templates

--- a/views/reviews/display/secondaryRatingIndividualContainer.html
+++ b/views/reviews/display/secondaryRatingIndividualContainer.html
@@ -1,8 +1,8 @@
 <div class="BVSecondaryRatingContainer">
 	<div class="_BVRatingLabelText"></div>
 	<div class="_BVRatingStarsContainer">
-		<div class="_BVRatingStarsFilled"><img class="_BVRatingStarsFilledImage" src="images/filledSecondary.svg" onerror="this.onerror=null; this.src=pathResource('images/filledSecondary.png');"></div>
-		<div class="_BVRatingStarsUnfilled"><img class="_BVRatingStarsUnfilledImage" src="images/unfilledSecondary.svg" onerror="this.onerror=null; this.src=pathResource('images/unfilledSecondary.png');"></div>
+		<div class="_BVRatingStarsFilled"><img class="_BVRatingStarsFilledImage" src="bvSDKFramework/images/filledSecondary.svg" /></div>
+		<div class="_BVRatingStarsUnfilled"><img class="_BVRatingStarsUnfilledImage" src="bvSDKFramework/images/unfilledSecondary.svg" /></div>
 		<div class="_BVRatingStarsText"></div>
 	</div>
     <div class="BVRatingOutOfContainer">
