--- a/views/universal/feedback/statusMessageContainer.html
+++ b/views/universal/feedback/statusMessageContainer.html
@@ -1,4 +1,4 @@
 <div class="BVStatusMessageWrapper">
 	<div class="_BVButtonCloseContainer"></div>
 	<div class="_BVStatusMessageText"></div>
-</div
+</div>
