--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -149,7 +149,7 @@
 		</div>
 		<div class="BVUserDataContainer">
 			<div class="BVAvatar">
-				<img src="bvSDKFramework/images/noAvatar.gif" onerror="this.onerror=null; this.src=pathResource('images/noAvatar.gif');" width="40" height="41" alt="" border="0" />
+				<img src="" data-img-url="images/noAvatar.gif" width="40" height="41" alt="" border="0" />
 			</div>
 			<div class="BVUserInfo">
 				<div class="_BVUserNicknameContainer"></div>
@@ -186,8 +186,8 @@
 	<div class="BVOverallRatingContainer">
 		<div class="_BVRatingLabelText"></div>
 		<div class="_BVRatingStarsContainer">
-			<div class="_BVRatingStarsFilled"><img class="_BVRatingStarsFilledImage" src="bvSDKFramework/images/filled.svg" /></div>
-			<div class="_BVRatingStarsUnfilled"><img class="_BVRatingStarsUnfilledImage" src="bvSDKFramework/images/unfilled.svg" /></div>
+			<div class="_BVRatingStarsFilled"><img class="_BVRatingStarsFilledImage" src="" data-img-url="images/filled.svg" /></div>
+			<div class="_BVRatingStarsUnfilled"><img class="_BVRatingStarsUnfilledImage" src="" data-img-url="images/unfilled.svg" /></div>
 			<div class="_BVRatingStarsText"></div>
 		</div>
 		<div class="BVRatingOutOfContainer">
@@ -203,8 +203,8 @@
 	<div class="BVSecondaryRatingContainer">
 		<div class="_BVRatingLabelText"></div>
 		<div class="_BVRatingStarsContainer">
-			<div class="_BVRatingStarsFilled"><img class="_BVRatingStarsFilledImage" src="bvSDKFramework/images/filledSecondary.svg" /></div>
-			<div class="_BVRatingStarsUnfilled"><img class="_BVRatingStarsUnfilledImage" src="bvSDKFramework/images/unfilledSecondary.svg" /></div>
+			<div class="_BVRatingStarsFilled"><img class="_BVRatingStarsFilledImage" src="" data-img-url="images/filledSecondary.svg" /></div>
+			<div class="_BVRatingStarsUnfilled"><img class="_BVRatingStarsUnfilledImage" src="" data-img-url="images/unfilledSecondary.svg" /></div>
 			<div class="_BVRatingStarsText"></div>
 		</div>
 	    <div class="BVRatingOutOfContainer">
@@ -254,7 +254,7 @@
 		<div class="_BVBadgesContainer"></div>
 		<div class="BVUserDataContainer">
 			<div class="BVAvatar">
-				<img src="images/noAvatar.gif" onerror="this.onerror=null; this.src=pathResource('images/noAvatar.gif');" width="40" height="41" alt="" border="0" />
+				<img src="" data-img-url="images/noAvatar.gif" width="40" height="41" alt="" border="0" />
 			</div>
 			<div class="BVUserInfo">
 				<div class="_BVUserNicknameContainer"></div>
