updated loading animation

--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -35,10 +35,17 @@
 	<div class="BVTag">
 		<span class="BVPrefix BVTagTextPrefix"></span>
 		<span class="BVValue _BVTagText"></span>
+		<span class="BVSuffix BVTagTextSuffix">, </span>
+	</div>
+</script>
+<!-- universal tag individual template -->
+<script id="bvtemplate-tag-individual-last-universal" type="html">
+	<div class="BVTag">
+		<span class="BVPrefix BVTagTextPrefix"></span>
+		<span class="BVValue _BVTagText"></span>
 		<span class="BVSuffix BVTagTextSuffix"></span>
 	</div>
 </script>
-
 
 <!-- USER INFO -->
 
@@ -758,6 +765,12 @@
 	<div class="BVTagIndividualInputContainer">
 		<div class="_BVLabelText"></div>
 		<div class="_BVInputGroupContainer"></div>
+	</div>
+</script>
+<!-- input image template -->
+<script id="bvtemplate-input-tag-individual-universal" type="html">
+	<div class="BVTagInput">
+		<div class="_BVCheckboxIndividualContainer"></div>
 	</div>
 </script>
 <!-- input image template -->
