--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -118,11 +118,13 @@
 <!-- universal quick take template -->
 <script id="bvtemplate-quick-take-universal" type="html">
 	<div class="_BVQuickTakeSummary">
+		<div class="BVQuickTakeSummaryTitle BVTitle">Customer Rating</div>
 		<div class="_BVOverallRatingContainer"></div>
 		<div class="_BVRecommendedContainerAverage"></div>
 	    <div class="_BVFilters">
-	        <div class="_BVFiltersTitle">Filter Reviews By:</div>
+	        <div class="_BVFiltersTitle BVTitle">Filter Reviews By:</div>
 	        <div class="_BVFiltersContainer"></div>
+	        <div class="BVFiltersFilteringStatement">Use the Filters above to narrow which reviews are shown.</div>
 	    </div>
 		<div class="_BVButtonWriteReviewContainer"></div>
 		<div class="BVSortContainer">
